--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -28,6 +28,7 @@
     "graphql": "^16.8.1",
     "minimist": "^1.2.8",
     "mustache": "^4.2.0",
+    "ts-node": "^10.9.2",
     "viem": "~1.21.4"
   }
 }
