--- a/pkg/services/package.json
+++ b/pkg/services/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "run-graph-node": "cd graph-node && docker-compose up",
+    "run-graph-node": "cd graph-node && docker compose up",
     "remove-graph-node": "cd graph-node && docker-compose down",
     "clean-graph-node": "rm -rf graph-node/data/"
   }
